Try to fix scrollbar issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -146,6 +146,9 @@ aside .fn-accent { /* Tamara */
 /*
     Main
 */
+.row.resume {
+    overflow: hidden;
+}
 section.resume {
     padding: 20px 0;
 }
